[gd_scene load_steps=17 format=2]

[ext_resource path="res://Scenes/Menu/button_title_audio.tscn" type="PackedScene" id=1]
[ext_resource path="res://Scenes/Menu/button_title_general.tscn" type="PackedScene" id=2]
[ext_resource path="res://Scenes/Menu/button_title_back.tscn" type="PackedScene" id=3]
[ext_resource path="res://Assets/Fonts/font1.tres" type="DynamicFont" id=4]
[ext_resource path="res://Scenes/Menu/Settings.gd" type="Script" id=5]
[ext_resource path="res://Materials/Textures/Glass/Glass_2K_Albedo.png" type="Texture" id=6]
[ext_resource path="res://Materials/Textures/Glass/Glass_2K_Normal.jpg" type="Texture" id=7]
[ext_resource path="res://Scenes/Menu/button_title_controls.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scenes/Menu/FadeIn.tscn" type="PackedScene" id=9]
[ext_resource path="res://Scenes/Menu/button_title_graphics.tscn" type="PackedScene" id=10]
[ext_resource path="res://Scenes/Menu/button_title_back.gd" type="Script" id=11]

[sub_resource type="DynamicFontData" id=1]
font_path = "res://Assets/Fonts/BluuNext-Bold.otf"

[sub_resource type="DynamicFont" id=2]
size = 14
outline_size = 1
outline_color = Color( 0.364706, 0.313726, 0.737255, 1 )
font_data = SubResource( 1 )

[sub_resource type="DynamicFontData" id=3]
font_path = "res://Assets/Fonts/BluuNext-Bold.otf"

[sub_resource type="DynamicFont" id=4]
size = 20
outline_color = Color( 0.364706, 0.313726, 0.737255, 1 )
font_data = SubResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 20
outline_color = Color( 0.364706, 0.313726, 0.737255, 1 )
font_data = SubResource( 3 )

[node name="SettingsScreen" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 0.509949
margin_bottom = 0.51001
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Menu" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Glass_2K_Albedo" type="Sprite" parent="Menu"]
modulate = Color( 0.94902, 0.94902, 1, 1 )
self_modulate = Color( 0.898039, 0.901961, 1, 1 )
position = Vector2( 210, 539.583 )
scale = Vector2( 0.205078, 0.527344 )
texture = ExtResource( 6 )
normal_map = ExtResource( 7 )

[node name="ColorRect" type="ColorRect" parent="Menu/Glass_2K_Albedo"]
margin_left = 1024.0
margin_top = -1024.0
margin_right = 1252.0
margin_bottom = 1024.0
color = Color( 0.301961, 0.321569, 0.745098, 0.188235 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect2" type="ColorRect" parent="Menu/Glass_2K_Albedo"]
margin_left = -1024.0
margin_top = -1024.0
margin_right = -796.0
margin_bottom = 1024.0
color = Color( 0.47451, 0.494118, 0.905882, 0.156863 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Title" type="Label" parent="Menu"]
margin_right = 1920.0
margin_bottom = 483.0
size_flags_vertical = 1
custom_fonts/font = ExtResource( 4 )
text = "Setpiece
"
align = 2
valign = 1
uppercase = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeftSide" type="HBoxContainer" parent="Menu"]
margin_top = 487.0
margin_right = 1874.0
margin_bottom = 1080.0
size_flags_horizontal = 0
size_flags_vertical = 3
custom_constants/separation = 0

[node name="VersionLabel" type="Label" parent="Menu/LeftSide"]
margin_top = 25.0
margin_right = 90.0
margin_bottom = 568.0
custom_fonts/font = SubResource( 2 )
text = "
























 Version 0.1      "

[node name="Buttons" type="VBoxContainer" parent="Menu/LeftSide"]
margin_left = 90.0
margin_right = 372.0
margin_bottom = 593.0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 15
alignment = 1

[node name="button_title_general" parent="Menu/LeftSide/Buttons" instance=ExtResource( 2 )]
margin_top = 49.0
margin_right = 282.0
margin_bottom = 136.0
disabled = true

[node name="button_title_audio" parent="Menu/LeftSide/Buttons" instance=ExtResource( 1 )]
margin_top = 151.0
margin_right = 282.0
margin_bottom = 238.0
disabled = true

[node name="button_title_graphics" parent="Menu/LeftSide/Buttons" instance=ExtResource( 10 )]
margin_top = 253.0
margin_right = 282.0
margin_bottom = 340.0
disabled = true

[node name="button_title_controls" parent="Menu/LeftSide/Buttons" instance=ExtResource( 8 )]
margin_top = 355.0
margin_right = 282.0
margin_bottom = 442.0
custom_colors/font_color_pressed = Color( 1, 0, 0, 1 )
disabled = false
toggle_mode = true

[node name="button_title_back" parent="Menu/LeftSide/Buttons" instance=ExtResource( 3 )]
margin_top = 457.0
margin_right = 282.0
margin_bottom = 544.0
script = ExtResource( 11 )

[node name="Label" type="Label" parent="Menu/LeftSide"]
margin_left = 372.0
margin_top = 284.0
margin_right = 492.0
margin_bottom = 309.0
text = "                              "

[node name="ControlsButtons" type="VBoxContainer" parent="Menu/LeftSide"]
margin_left = 492.0
margin_right = 574.0
margin_bottom = 593.0
alignment = 2

[node name="controls-restore" type="Button" parent="Menu/LeftSide/ControlsButtons"]
margin_top = 527.0
margin_right = 82.0
margin_bottom = 558.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color_hover = Color( 1, 1, 1, 0.662745 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 0.258824 )
disabled = true
text = "Restore"
flat = true

[node name="controls-accept" type="Button" parent="Menu/LeftSide/ControlsButtons"]
margin_top = 562.0
margin_right = 82.0
margin_bottom = 593.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_hover = Color( 1, 1, 1, 0.662745 )
custom_colors/font_color_pressed = Color( 1, 1, 1, 0.258824 )
text = "Accept"
flat = true

[node name="ControlsMain" type="VBoxContainer" parent="Menu/LeftSide"]
margin_left = 574.0
margin_right = 1874.0
margin_bottom = 593.0
rect_min_size = Vector2( 1300, 0 )
rect_clip_content = true
size_flags_horizontal = 3
size_flags_vertical = 3
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FadeIn" parent="." instance=ExtResource( 9 )]
visible = false

[node name="ViewportContainer" type="ViewportContainer" parent="."]
visible = false
margin_right = 1920.0
margin_bottom = 1080.0
stretch = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Viewport" type="Viewport" parent="ViewportContainer"]
size = Vector2( 1920, 1080 )
handle_input_locally = false
disable_3d = true
render_target_update_mode = 0
[connection signal="pressed" from="Menu/LeftSide/Buttons/button_title_controls" to="." method="_on_button_title_controls_pressed"]
[connection signal="pressed" from="Menu/LeftSide/ControlsButtons/controls-restore" to="." method="_on_controlsrestore_pressed"]
[connection signal="pressed" from="Menu/LeftSide/ControlsButtons/controls-accept" to="." method="_on_controlsaccept_pressed"]
[connection signal="fade_finished" from="FadeIn" to="." method="_on_FadeIn_fade_finished"]
